fix: remove z-index from buttons kidsProfile

--- a/src/app/(main)/parents/components/KidProfile/KidProfile.module.scss
+++ b/src/app/(main)/parents/components/KidProfile/KidProfile.module.scss
@@ -82,7 +82,7 @@
   position: absolute;
   top: 24px;
   right: 24px;
-  z-index: 2;
+
 
   & img {
     cursor: pointer;
